--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,10 @@
             "name": "Nat Zimmermann",
             "email": "nat@ntzm.io"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "PhpCsFixerPlayground\\": "src/"
+        }
+    }
 }
