--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
     "autoload": {
         "psr-4": {
             "PhpCsFixerPlayground\\": "src/"
-        }
+        },
+        "files": [
+            "src/functions.php"
+        ]
     }
 }
