--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "name": "ntzm/php-cs-fixer-playground",
     "type": "project",
     "require": {
-        "friendsofphp/php-cs-fixer": "^2.11"
+        "friendsofphp/php-cs-fixer": "^2.11",
+        "nikic/fast-route": "^1.3",
+        "symfony/http-foundation": "^4.0"
     },
     "license": "MIT",
     "authors": [
