--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "require": {
         "friendsofphp/php-cs-fixer": "^2.11",
         "nikic/fast-route": "^1.3",
-        "symfony/http-foundation": "^4.0"
+        "symfony/http-foundation": "^4.0",
+        "hashids/hashids": "^3.0"
     },
     "license": "MIT",
     "authors": [
