--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,12 @@
     "name": "ntzm/php-cs-fixer-playground",
     "type": "project",
     "require": {
+        "php": "^7.2",
         "friendsofphp/php-cs-fixer": "^2.11",
         "nikic/fast-route": "^1.3",
         "symfony/http-foundation": "^4.0",
-        "hashids/hashids": "^3.0"
+        "hashids/hashids": "^3.0",
+        "twig/twig": "^2.4"
     },
     "license": "MIT",
     "authors": [
