--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "nikic/fast-route": "^1.3",
         "symfony/http-foundation": "^4.0",
         "hashids/hashids": "^3.0",
-        "twig/twig": "^2.4"
+        "twig/twig": "^2.4",
+        "sebastian/diff": "^3.0"
     },
     "license": "MIT",
     "authors": [
