--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "symfony/http-foundation": "^4.0",
         "hashids/hashids": "^3.0",
         "twig/twig": "^2.4",
-        "sebastian/diff": "^3.0"
+        "sebastian/diff": "^3.0",
+        "league/container": "^2.4"
     },
     "license": "MIT",
     "authors": [
