--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,8 @@
         "psr-4": {
             "PhpCsFixerPlayground\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.0"
     }
 }
