--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "mockery/mockery": "^1.0"
     }
 }
