--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,14 @@
             "PhpCsFixerPlayground\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "PhpCsFixerPlayground\\Tests\\": "tests/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
-        "mockery/mockery": "^1.0"
+        "mockery/mockery": "^1.0",
+        "phpstan/phpstan": "^0.9.2"
     }
 }
