--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,4 @@ script:
   - vendor/bin/phpunit
   - vendor/bin/php-cs-fixer --diff --dry-run -v fix
   - vendor/bin/phpstan analyse -c phpstan.neon -l 7 html src tests
+  - vendor/bin/psalm
