--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "require-dev": {
         "phpunit/phpunit": "^7.0",
         "phpstan/phpstan": "^0.9.2",
-        "phpstan/phpstan-phpunit": "^0.9.4"
+        "phpstan/phpstan-phpunit": "^0.9.4",
+        "vimeo/psalm": "^1.0"
     }
 }
