--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,20 @@ cache:
   directories:
     - $HOME/.composer/cache
 
+env:
+  global:
+    - CODECLIMATE_REPO_TOKEN=ccc827c071779278209c2bbab65069429f0a615bf3b7301ce2e371aa56656f43
+
 before_install:
   - travis_retry composer self-update
 
 install:
   - travis_retry composer install --prefer-dist --no-interaction --no-suggest
-  - travis_retry composer global require codeclimate/php-test-reporter
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 
 script:
   - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
@@ -23,4 +31,4 @@ script:
   - vendor/bin/psalm
 
 after_script:
-  - CODECLIMATE_REPO_TOKEN="ccc827c071779278209c2bbab65069429f0a615bf3b7301ce2e371aa56656f43" test-reporter
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
