--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,7 @@
 {
     "name": "ntzm/php-cs-fixer-playground",
     "type": "project",
-    "require": {
-        "php": "^7.2",
-        "friendsofphp/php-cs-fixer": "^2.11",
-        "nikic/fast-route": "^1.3",
-        "symfony/http-foundation": "^4.0",
-        "hashids/hashids": "^3.0",
-        "twig/twig": "^2.4",
-        "sebastian/diff": "^3.0",
-        "league/container": "^2.4",
-        "zendframework/zend-code": "^3.3"
-    },
+    "description": "An interactive playground for PHP-CS-Fixer",
     "license": "MIT",
     "authors": [
         {
@@ -19,6 +9,23 @@
             "email": "nat@ntzm.io"
         }
     ],
+    "require": {
+        "php": "^7.2",
+        "friendsofphp/php-cs-fixer": "^2.11",
+        "hashids/hashids": "^3.0",
+        "league/container": "^2.4",
+        "nikic/fast-route": "^1.3",
+        "sebastian/diff": "^3.0",
+        "symfony/http-foundation": "^4.0",
+        "twig/twig": "^2.4",
+        "zendframework/zend-code": "^3.3"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^0.9.2",
+        "phpstan/phpstan-phpunit": "^0.9.4",
+        "phpunit/phpunit": "^7.0",
+        "vimeo/psalm": "^1.0"
+    },
     "autoload": {
         "psr-4": {
             "PhpCsFixerPlayground\\": "src/"
@@ -28,11 +35,5 @@
         "psr-4": {
             "PhpCsFixerPlayground\\Tests\\": "tests/"
         }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^7.0",
-        "phpstan/phpstan": "^0.9.2",
-        "phpstan/phpstan-phpunit": "^0.9.4",
-        "vimeo/psalm": "^1.0"
     }
 }
