--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "hashids/hashids": "^3.0",
         "league/container": "^2.4",
         "nikic/fast-route": "^1.3",
+        "ocramius/package-versions": "^1.3",
         "sebastian/diff": "^3.0",
         "symfony/http-foundation": "^4.0",
         "twig/twig": "^2.4",
@@ -25,6 +26,9 @@
         "phpstan/phpstan-phpunit": "^0.9.4",
         "phpunit/phpunit": "^7.0",
         "vimeo/psalm": "^1.0"
+    },
+    "config": {
+        "optimize-autoloader": true
     },
     "autoload": {
         "psr-4": {
