Add php-cs-fixer version updater

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -13,6 +13,6 @@ return Config::create()
         'yoda_style' => false,
     ])
     ->setFinder(
-        Finder::create()->in(__DIR__)
+        Finder::create()->in(__DIR__)->notPath('data')
     )
 ;
