--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
     "require-dev": {
         "phpstan/phpstan": "^0.9.2",
         "phpstan/phpstan-phpunit": "^0.9.4",
-        "phpunit/phpunit": "^7.0",
-        "vimeo/psalm": "^1.0"
+        "phpunit/phpunit": "^7.0"
     },
     "config": {
         "optimize-autoloader": true
