Force composer to install 7.2

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,10 @@
         "phpunit/phpunit": "^7.0"
     },
     "config": {
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "platform": {
+            "php": "7.2"
+        }
     },
     "autoload": {
         "psr-4": {
