--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "require-dev": {
         "phpstan/phpstan": "^0.9.2",
         "phpstan/phpstan-phpunit": "^0.9.4",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "mikey179/vfsStream": "^1.6"
     },
     "config": {
         "optimize-autoloader": true,
