--- a/composer.json
+++ b/composer.json
@@ -14,20 +14,20 @@
         "doctrine/orm": "^2.6",
         "friendsofphp/php-cs-fixer": "^2.11",
         "guzzlehttp/guzzle": "^6.3",
-        "hashids/hashids": "^3.0",
         "league/container": "^2.4",
         "nikic/fast-route": "^1.3",
         "ocramius/package-versions": "^1.3",
+        "ramsey/uuid": "^3.7",
         "sebastian/diff": "^3.0",
         "symfony/http-foundation": "^4.0",
         "twig/twig": "^2.4",
         "zendframework/zend-code": "^3.3"
     },
     "require-dev": {
+        "mikey179/vfsStream": "^1.6",
         "phpstan/phpstan": "^0.9.2",
         "phpstan/phpstan-phpunit": "^0.9.4",
-        "phpunit/phpunit": "^7.0",
-        "mikey179/vfsStream": "^1.6"
+        "phpunit/phpunit": "^7.0"
     },
     "config": {
         "optimize-autoloader": true,
