--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "bootstrap": "^4.1.1",
         "gulp": "github:gulpjs/gulp#4.0",
         "gulp-concat": "^2.6.1",
+        "gulp-sass": "^4.0.1",
         "prismjs": "^1.14.0"
     }
 }
