--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -10,6 +10,7 @@ return Config::create()
         '@Symfony:risky' => true,
         '@PHP71Migration' => true,
         '@PHP71Migration:risky' => true,
+        '@DoctrineAnnotation' => true,
         'ordered_imports' => true,
         'yoda_style' => false,
     ])
