--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -11,6 +11,7 @@ return Config::create()
         '@PHP71Migration' => true,
         '@PHP71Migration:risky' => true,
         '@DoctrineAnnotation' => true,
+        'native_function_invocation' => ['include' => ['@compiler_optimized']],
         'ordered_imports' => true,
         'yoda_style' => false,
     ])
