--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "php": "^7.2",
+        "doctrine/migrations": "2.0.x-dev",
         "doctrine/orm": "^2.6",
         "friendsofphp/php-cs-fixer": "^2.11",
         "league/container": "^2.4",
@@ -19,8 +20,7 @@
         "sebastian/diff": "^3.0",
         "symfony/http-foundation": "^4.0",
         "twig/twig": "^2.4",
-        "zendframework/zend-code": "^3.3",
-        "doctrine/migrations": "2.0.x-dev"
+        "zendframework/zend-code": "^3.3"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.9.2",
