--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,10 @@
         "roave/security-advisories": "dev-master"
     },
     "config": {
-        "optimize-autoloader": true,
         "platform": {
             "php": "7.2"
-        }
+        },
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
