--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "nikic/fast-route": "^1.3",
         "ramsey/uuid": "^3.7",
         "sebastian/diff": "^3.0",
+        "symfony/finder": "^4.1",
         "symfony/http-foundation": "^4.0",
         "twig/twig": "^2.4",
         "zendframework/zend-code": "^3.3"
