--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "doctrine/orm": "^2.6",
         "friendsofphp/php-cs-fixer": "^2.11",
         "league/container": "^2.4",
+        "monolog/monolog": "^1.23",
         "nikic/fast-route": "^1.3",
+        "psr/log": "^1.0",
         "ramsey/uuid": "^3.7",
         "sebastian/diff": "^3.0",
         "symfony/finder": "^4.1",
