--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     "require": {
         "php": "^7.2",
         "ext-pcre": "*",
-        "doctrine/migrations": "2.0.x-dev",
+        "doctrine/migrations": "^2.0",
         "doctrine/orm": "^2.6",
         "friendsofphp/php-cs-fixer": "^2.11",
-        "league/container": "^2.4",
+        "league/container": "^3.2",
         "monolog/monolog": "^1.23",
         "nikic/fast-route": "^1.3",
         "psr/log": "^1.0",
